<resources>
    <string name="app_name" translatable="false">Diet</string>
    <string name="select_another_meal" translatable="false">Select another meal</string>
    <string name="background_image_content_description" translatable="false">Background image</string>
    <string name="add_new_portion" translatable="false">Add new portion</string>

    <string name="meal_title">Current meal</string>
    <string name="progress_title">Progress</string>

    <string name="carbohydrates_title">Carbohydrates</string>
    <string name="veggies_title">Vegetables</string>
    <string name="fruit_title">Fruit</string>
    <string name="legumes_title">Legumes</string>
    <string name="eggs_title">Eggs</string>
    <string name="canned_tuna_title">Canned tuna</string>
    <string name="cold_cuts_title">Cold cuts</string>
    <string name="cheese_title">Cheese</string>
    <string name="white_meat_title">White meat</string>
    <string name="fish_title">Fish</string>
    <string name="red_meat_title">Red meat</string>
    <string name="pizza_title">Pizza</string>
    <string name="cookies_title">Cookies</string>

    <string name="breakfast_title">Breakfast</string>
    <string name="lunch_title">Lunch</string>
    <string name="afternoon_snack_title">Afternoon Snack</string>
    <string name="dinner_title">Dinner</string>
    <string name="night_snack_title">Night snack</string>
    <string name="weight_hint">Weight (KG)</string>
    <string name="new_measurements_title">New measurements</string>
    <string name="bmi">BMI</string>
    <string name="waist">Waist (cm)</string>
    <string name="umbilical">Umbilical (cm)</string>
    <string name="hip">Hip (cm)</string>
    <string name="body_fat">Body Fat (%)</string>
    <string name="alternate_meal_title">Meal</string>
    <string name="afternoon_snack_short">Snack</string>
    <string name="night_snack_short">Snack</string>
    <string name="alternate_day_title">Day</string>
    <string name="day_1_short">Mon</string>
    <string name="day_2_short">Tue</string>
    <string name="day_3_short">Wed</string>
    <string name="day_4_short">Tue</string>
    <string name="day_5_short">Fri</string>
    <string name="day_6_short">Sat</string>
    <string name="day_7_short">Sun</string>
    <string name="empty_progress_message">No progress has been recorded yet</string>
    <string name="empty_mandatory_field_error">This field is mandatory</string>
    <string name="new_serving_title">New serving</string>
    <string name="food_description_hint">Food description</string>
    <string name="food_number_hint">Number</string>
    <string name="food_unit_hint">Unit</string>
    <string name="save_new_food">Save</string>
    <string name="food_type_hint">Food type</string>

    <string name="history_title">History</string>
    <string name="settings_title">Settings</string>
    <string name="loading">Loading…</string>
    <string name="retry">Try again</string>
    <string name="loading_animation">Loading animation</string>
    <string name="error_animation">Error animation</string>
    <string name="licenses_title">Licenses</string>

</resources>