<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/element_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/progress_background_color">

    <TextView
        android:id="@+id/recap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-thin"
        android:text="Recap"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/third_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/starting_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/second_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toBottomOf="@+id/recap_title"
        app:srcCompat="@drawable/ic_history" />

    <ImageView
        android:id="@+id/last_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/starting_point"
        app:layout_constraintEnd_toStartOf="@+id/third_guideline"
        app:layout_constraintStart_toStartOf="@+id/second_guideline"
        app:layout_constraintTop_toTopOf="@+id/starting_point"
        app:srcCompat="@drawable/ic_last_check" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/last_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/third_guideline"
        app:layout_constraintTop_toTopOf="@+id/last_check"
        app:srcCompat="@drawable/ic_delta" />

    <TextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/weight_hint"
        app:layout_constraintEnd_toStartOf="@+id/first_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starting_point" />

    <TextView
        android:id="@+id/bmi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/bmi"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toStartOf="@+id/first_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_title" />

    <TextView
        android:id="@+id/body_fat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/body_fat"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toStartOf="@+id/first_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_title" />

    <TextView
        android:id="@+id/waist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/waist"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toStartOf="@+id/first_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body_fat_title" />

    <TextView
        android:id="@+id/umbilical_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/umbilical"
        android:fontFamily="sans-serif-thin"
        app:layout_constraintEnd_toStartOf="@+id/first_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waist_title" />

    <TextView
        android:id="@+id/hip_title"
        android:fontFamily="sans-serif-thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:text="@string/hip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/first_guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/umbilical_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/weight_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/weight_title"
        app:layout_constraintEnd_toStartOf="@+id/second_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toTopOf="@+id/weight_title"
        tools:text="100" />

    <TextView
        android:id="@+id/bmi_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/bmi_title"
        app:layout_constraintEnd_toStartOf="@+id/second_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toTopOf="@+id/bmi_title"
        tools:text="12,25" />

    <TextView
        android:id="@+id/body_fat_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/body_fat_title"
        app:layout_constraintEnd_toStartOf="@+id/second_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toTopOf="@+id/body_fat_title"
        tools:text="35,25" />

    <TextView
        android:id="@+id/waist_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/waist_title"
        app:layout_constraintEnd_toStartOf="@+id/second_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toTopOf="@+id/waist_title"
        tools:text="150" />

    <TextView
        android:id="@+id/umbilical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/umbilical_title"
        app:layout_constraintEnd_toStartOf="@+id/second_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toTopOf="@+id/umbilical_title"
        tools:text="120" />

    <TextView
        android:id="@+id/hip_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/hip_title"
        app:layout_constraintEnd_toStartOf="@+id/second_guideline"
        app:layout_constraintStart_toStartOf="@+id/first_guideline"
        app:layout_constraintTop_toTopOf="@+id/hip_title"
        tools:text="100" />

    <TextView
        android:id="@+id/weight_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/weight_start"
        app:layout_constraintEnd_toStartOf="@+id/third_guideline"
        app:layout_constraintStart_toStartOf="@+id/second_guideline"
        app:layout_constraintTop_toTopOf="@+id/weight_start"
        tools:text="100" />

    <TextView
        android:id="@+id/bmi_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/bmi_start"
        app:layout_constraintEnd_toStartOf="@+id/third_guideline"
        app:layout_constraintStart_toStartOf="@+id/second_guideline"
        app:layout_constraintTop_toTopOf="@+id/bmi_start"
        tools:text="11,25" />

    <TextView
        android:id="@+id/body_fat_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/body_fat_start"
        app:layout_constraintEnd_toStartOf="@+id/third_guideline"
        app:layout_constraintStart_toStartOf="@+id/second_guideline"
        app:layout_constraintTop_toTopOf="@+id/body_fat_start"
        tools:text="33,25" />

    <TextView
        android:id="@+id/waist_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/waist_start"
        app:layout_constraintEnd_toStartOf="@+id/third_guideline"
        app:layout_constraintStart_toStartOf="@+id/second_guideline"
        app:layout_constraintTop_toTopOf="@+id/waist_start"
        tools:text="120" />

    <TextView
        android:id="@+id/umbilical_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/umbilical_start"
        app:layout_constraintEnd_toStartOf="@+id/third_guideline"
        app:layout_constraintStart_toStartOf="@+id/second_guideline"
        app:layout_constraintTop_toTopOf="@+id/umbilical_start"
        tools:text="110" />

    <TextView
        android:id="@+id/hip_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/hip_start"
        app:layout_constraintEnd_toStartOf="@+id/third_guideline"
        app:layout_constraintStart_toStartOf="@+id/second_guideline"
        app:layout_constraintTop_toTopOf="@+id/hip_start"
        tools:text="68" />

    <TextView
        android:id="@+id/weight_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/weight_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/third_guideline"
        app:layout_constraintTop_toTopOf="@+id/weight_last"
        tools:text="-8" />

    <TextView
        android:id="@+id/bmi_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/bmi_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/third_guideline"
        app:layout_constraintTop_toTopOf="@+id/bmi_last"
        tools:text="-50" />

    <TextView
        android:id="@+id/body_fat_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/body_fat_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/third_guideline"
        app:layout_constraintTop_toTopOf="@+id/body_fat_last"
        tools:text="-89" />

    <TextView
        android:id="@+id/waist_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/waist_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/third_guideline"
        app:layout_constraintTop_toTopOf="@+id/waist_last"
        tools:text="-80" />

    <TextView
        android:id="@+id/umbilical_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/umbilical_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/third_guideline"
        app:layout_constraintTop_toTopOf="@+id/umbilical_last"
        tools:text="36" />

    <TextView
        android:id="@+id/hip_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="@+id/hip_last"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/third_guideline"
        app:layout_constraintTop_toTopOf="@+id/hip_last"
        app:layout_constraintVertical_bias="0.0"
        tools:text="-89" />
</androidx.constraintlayout.widget.ConstraintLayout>